# regrowth

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_01_01.md  LICENSE  TECHNICAL_DESIGN.md  VERIFICATION_01_01.md  project.md  readme.md  regrowth.code-workspace  task_details.md
.github/agents/: benchmarker.agent.md  coder.agent.md  integrationtester.agent.md  pipeline.agent.md  planner.agent.md  reviewer.agent.md  tester.agent.md
src/: components.rs  grid.rs  main.rs  plugins.rs
src/grid/: algorithms.rs  coordinates.rs  grid.rs  mod.rs
